@@ -34,6 +34,9 @@ Version 0.7.5 UNRELEASED
   * [cmdline] When simulating do not prompt for removal of essential packages
     (Closes: #613049)
 
+  * [cmdline] When simulating, add notice before confirmation to continue
+    actions (Closes: #173277)
+
 - User visible changes:
 
   * [cmdline] Minor improvements to help (Closes: #497136)
